added semi-functional 'Hit' indicator

--- a/SimpleSpriteKit/Base.lproj/Main.storyboard
+++ b/SimpleSpriteKit/Base.lproj/Main.storyboard
@@ -8,6 +8,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AmericanTypewriter.ttc">
+            <string>AmericanTypewriter-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="Lgi-VX-dKg">
@@ -25,9 +30,18 @@
                                 </connections>
                             </arskView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FIRE!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="stN-rV-XS4">
-                                <rect key="frame" x="148" y="536.5" width="79.5" height="39.5"/>
+                                <rect key="frame" x="148" y="536" width="80" height="40"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="33"/>
                                 <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HIT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yjt-yU-6Cd">
+                                <rect key="frame" x="125" y="72" width="125" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="gwJ-qU-dCU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="35"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -35,14 +49,18 @@
                         <constraints>
                             <constraint firstItem="EO5-fy-WZq" firstAttribute="leading" secondItem="cP8-R2-ikh" secondAttribute="leading" id="60k-Ay-yrK"/>
                             <constraint firstItem="EO5-fy-WZq" firstAttribute="bottom" secondItem="cP8-R2-ikh" secondAttribute="bottom" id="Ekh-7t-9jM"/>
+                            <constraint firstItem="Yjt-yU-6Cd" firstAttribute="centerX" secondItem="stN-rV-XS4" secondAttribute="centerX" id="Q6Z-3m-l3k"/>
                             <constraint firstItem="EO5-fy-WZq" firstAttribute="trailing" secondItem="cP8-R2-ikh" secondAttribute="trailing" id="ToN-RI-2AX"/>
                             <constraint firstItem="cP8-R2-ikh" firstAttribute="bottom" secondItem="stN-rV-XS4" secondAttribute="bottom" constant="91" id="ZXY-58-QDP"/>
+                            <constraint firstItem="Yjt-yU-6Cd" firstAttribute="top" secondItem="cP8-R2-ikh" secondAttribute="top" constant="52" id="asY-fG-ag5"/>
                             <constraint firstItem="stN-rV-XS4" firstAttribute="centerX" secondItem="hKr-Yd-vPm" secondAttribute="centerX" id="cgQ-Oz-KLa"/>
+                            <constraint firstItem="Yjt-yU-6Cd" firstAttribute="leading" secondItem="cP8-R2-ikh" secondAttribute="leading" constant="125" id="d4J-BL-3nA"/>
                             <constraint firstItem="EO5-fy-WZq" firstAttribute="top" secondItem="hKr-Yd-vPm" secondAttribute="top" id="xgg-Dt-RQM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cP8-R2-ikh"/>
                     </view>
                     <connections>
+                        <outlet property="hitIndicator" destination="Yjt-yU-6Cd" id="jtC-cm-wVw"/>
                         <outlet property="sceneView" destination="EO5-fy-WZq" id="zEU-uE-kot"/>
                         <outlet property="targetingLabel" destination="stN-rV-XS4" id="t3W-Lv-cD2"/>
                     </connections>
